devops/base/server/policy.yaml
# Copyright 2021 The Province of British Columbia
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#      http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
#
---
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: allow-server-to-mongo
spec:
  # Allow the server to talk to the mongo
  # database cluster on the given port.
  podSelector:
    matchLabels:
      statefulset: mongodb
  ingress:
    - from:
        - podSelector:
            matchLabels:
              role: server
      ports:
        - protocol: TCP
          port: 27017
